main page loading chartlist

--- a/app/css/avnav_viewer.less
+++ b/app/css/avnav_viewer.less
@@ -179,6 +179,9 @@
   height: ( @bottomPanelHeight / 2.5 );
   vertical-align: middle;
 }
+.avn_mainpage_image{
+  width: ( @bottomPanelHeight / 1.5 );
+}
   /*-------------------------------------------------------------
      buttons
   -------------------------------------------------------------*/
