--- a/app/css/avnav_viewer.less
+++ b/app/css/avnav_viewer.less
@@ -52,6 +52,9 @@
 .icon-cog {
   .ourIcon("\e994");
 }
+.icon-arrow-left2{
+  .ourIcon("\ea40");
+}
 
   .nightColors() when ( @nightModePercent <100% ){
     background-color: #000;
