status page updates, inline styles

--- a/app/css/avnav_viewer.less
+++ b/app/css/avnav_viewer.less
@@ -185,6 +185,13 @@
 .avn_mainpage_image{
   width: ( @bottomPanelHeight / 1.5 );
 }
+
+.avn_status_name{
+  padding-left: 3px;
+}
+.avn_status_info{
+  padding-left: 3px;
+}
   /*-------------------------------------------------------------
      buttons
   -------------------------------------------------------------*/
