less compilation during build

--- a/app/css/avnav_viewer.less
+++ b/app/css/avnav_viewer.less
@@ -46,6 +46,8 @@
     content: @content;
   }
 }
+
+
 .icon-stats-bars2 {
   .ourIcon("\e99d");
 }
@@ -231,6 +233,8 @@
     color: white;
     .nightColors();
     background: fade(#9E1E1E,@nightModePercent);
+    text-align: center;
+    padding: 0px; //this ensures icons being centered on mobile safari
 
   }
   button.avn_button{
