no classes any more in MainPage

--- a/app/css/avnav_viewer.less
+++ b/app/css/avnav_viewer.less
@@ -1,3 +1,6 @@
+//TODO: remove all styles that have variables here
+//should we keep some "basic" stuff?
+
 
 //variables will be overwritten by properties!
 @topPanelHeight:00px;
@@ -38,6 +41,13 @@
 
   src: url("./fonts/icomoon.eot");
   src: url("./fonts/icomoon.eot?#iefix") format("embedded-opentype"), url("./fonts/icomoon.woff") format("woff"), url("./fonts/icomoon.ttf") format("truetype"), url("./fonts/icomoon.svg#svgFontName") format("svg");
+}
+
+@font-face {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  src:  url("./fonts/Roboto-Regular.ttf") format("truetype");
 }
 
 .ourIcon(@content){
