--- a/app/css/avnav_viewer.less
+++ b/app/css/avnav_viewer.less
@@ -105,7 +105,8 @@
     width: 100%;
     margin: 0;
     padding: 0;
-    font-family: Verdana,Arial,sans-serif;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-size: 14px;
   }
 
   .avn_panel{
