--- a/app/css/theme.scss
+++ b/app/css/theme.scss
@@ -1,1 +1,9 @@
 //theming for react-toolbox
+$color-primary: $palette-indigo-500 !default;
+$color-primary-dark: $palette-indigo-700 !default;
+$color-accent: $palette-pink-a200 !default;
+$color-accent-dark: $palette-pink-700 !default;
+$color-primary-contrast: $color-dark-contrast !default;
+$color-accent-contrast: $color-dark-contrast !default;
+
+$unit: 1rem;
