--- a/app/pages/Main.scss
+++ b/app/pages/Main.scss
@@ -2,17 +2,6 @@
 
 .chartListItem{
   border-bottom: 1px solid;
-  border-bottom-color: $color-divider;
-  min-height: 6 * $unit;
-  display: flex;
-  display: -webkit-flex;
-}
-//WA for old blackberry...
-.chartListItem > img {
-  display: inline;
-  vertical-align: middle;
-}
-
-.chartListItem > span > span {
-  display: inline;
+  border-bottom-color: grey;
+  line-height: 6 * $unit;
 }
