--- a/app/css/avnav_viewer-ori.less
+++ b/app/css/avnav_viewer-ori.less
@@ -102,7 +102,13 @@ button.avn_buttonInactive{
    general settings
 -------------------------------------------------------------*/
 
-
+.nightColors() when ( @nightModePercent <100% ){
+  background-color: #000;
+  color: @nightColor;
+}
+.nightOPacity() when(@nightModePercent <100%){
+  opacity: @nightModeValue;
+}
 
 input when (@nightModePercent<100%) {
   background-color: #646463;
