--- a/app/css/avnav_viewer.less
+++ b/app/css/avnav_viewer.less
@@ -48,9 +48,10 @@
 }
 
 .ourIcon(@content){
-  font-family: Moonicons;
+  height: initial !important;
   &:before {
     content: @content;
+    font-family: Moonicons !important;
   }
 }
 
