--- a/app/css/commons.scss
+++ b/app/css/commons.scss
@@ -1,3 +1,16 @@
+@import "../../node_modules/normalize.css/normalize.css";
+
+
+html, body{
+  width: 100%;
+  height: 100%;
+}
+
+*{
+  box-sizing: border-box;
+}
+
+
 .material-icons{
   height: initial;
   font-size: inherit;
@@ -13,6 +26,40 @@ a.list-item, span.list-item, div.list-item, strong.list-item {
 
 }
 
-.panelMargin{
+.avPanelMargin{
   margin: 1.25rem;
+}
+
+.avFlexGrow{
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    overflow: hidden;
+}
+
+.avFlexGrowScroll{
+    @extend .avFlexGrow;
+    overflow: auto;
+}
+
+.avFlex{
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+.avFlexRow{
+  @extend .avFlex;
+  -webkit-box-orient: horizontal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+}
+.avFlexColumn{
+  @extend .avFlex;
+  -webkit-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
