--- a/app/pages/Main.scss
+++ b/app/pages/Main.scss
@@ -7,3 +7,11 @@
 .chartListItems{
   vertical-align: middle !important;
 }
+
+.bottomPanel{
+  position: absolute;
+  left:0;
+  right:0;
+  bottom: 0;
+  overflow: hidden;
+}
