--- a/app/pages/Main.scss
+++ b/app/pages/Main.scss
@@ -1,11 +1,24 @@
 @import '../css/base';
 
-.chartListInner{
-  margin: 1 * $unit;
+
+.chartListItem{
+
+  vertical-align: middle !important;
+  overflow: hidden;
+  width: 20em;
+  height: 4em;
+  display: inline-block;
+  margin-right: 3em;
+  padding: 1em;
+  line-height: 2em
 }
 
-.chartListItems{
-  vertical-align: middle !important;
+.chartListImage{
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  margin-right: 1em;
+  vertical-align: middle;
 }
 
 .bottomPanel{
