--- a/app/components/Widget.scss
+++ b/app/components/Widget.scss
@@ -4,7 +4,12 @@ $fontBase: 1.5em;
   border-radius: 0.2em;
   background-color: white;
   z-index: 100;
-  padding: 0.3em
+  padding: 0.3em;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+  0 1px 5px 0 rgba(0, 0, 0, 0.12),
+  0 3px 1px -2px rgba(0, 0, 0, 0.2); /* z1 shadow */
+  margin-left: 0.3em;
+  margin-bottom: 0.3em;
 }
 .main{
   font-size: 1.5 * $fontBase;
