--- a/app/components/Widget.scss
+++ b/app/components/Widget.scss
@@ -10,6 +10,7 @@ $fontBase: 1.5em;
   0 3px 1px -2px rgba(0, 0, 0, 0.2); /* z1 shadow */
   margin-left: 0.3em;
   margin-bottom: 0.3em;
+  pointer-events: all;
 }
 .main{
   font-size: 1.5 * $fontBase;
