--- a/lib/material-framework-gh-pages/css/material.css
+++ b/lib/material-framework-gh-pages/css/material.css
@@ -1316,23 +1316,23 @@ code {
 	            0 1px 5px 0 rgba(0, 0, 0, 0.12),
 	            0 3px 1px -2px rgba(0, 0, 0, 0.2);
 }
-.card[z="2"] {
+.card[data-z="2"] {
 	box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
 	            0 1px 10px 0 rgba(0, 0, 0, 0.12),
 	            0 2px 4px -1px rgba(0, 0, 0, 0.4);
 }
 .dialog,
-.card[z="3"] {
+.card[data-z="3"] {
 	box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14),
 	            0 1px 18px 0 rgba(0, 0, 0, 0.12),
 	            0 3px 5px -1px rgba(0, 0, 0, 0.4);
 }
-.card[z="4"] {
+.card[data-z="4"] {
 	box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14),
 	            0 3px 14px 2px rgba(0, 0, 0, 0.12),
 	            0 5px 5px -3px rgba(0, 0, 0, 0.4);
 }
-.card[z="5"] {
+.card[data-z="5"] {
 	box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14),
 	            0 6px 30px 5px rgba(0, 0, 0, 0.12),
 	            0 8px 10px -5px rgba(0, 0, 0, 0.4);
