icon/font usage cleanup

--- a/app/css/avnav_viewer.less
+++ b/app/css/avnav_viewer.less
@@ -56,22 +56,22 @@
 }
 
 
-.icon-stats-bars2 {
+.avicon-stats-bars2 {
   .ourIcon("\e99d");
 }
-.icon-cog {
+.avicon-cog {
   .ourIcon("\e994");
 }
-.icon-arrow-left2{
+.avicon-arrow-left2{
   .ourIcon("\ea40");
 }
-.icon-checkmark {
+.avicon-checkmark {
   .ourIcon("\ea10");
 }
-.icon-zoom-in{
+.avicon-zoom-in{
   .ourIcon("\e987");
 }
-.icon-zoom-out{
+.avicon-zoom-out{
   .ourIcon("\e988");
 }
   .nightColors() when ( @nightModePercent <100% ){
